# RMA-grupo-3

./: README.md  Rutas donde se modificó algo.txt  database.py  dependencies.py  main.py  package-lock.json  package.json  pyproject.toml  test.db
app/: app.py  config.py  crud.py  database.py  db.py  main.py  models.py  pyproject.toml  routers.py  schemas.py
backend/: bot.py  database.py  export-csv.py  main.py  output.csv  pyproject.toml  schemas.py  test.db  token_bot.env
backend/routers/: auth.py  datosGenerales.py  nodos.py  personas.py  productos.py  temperaturas.py  usuarios.py  ws.py
env/: pyvenv.cfg
env/Scripts/: activate  activate.bat  dul-receive-pack  dul-upload-pack
frontend/: index.html  package-lock.json  package.json
frontend/src/: app.tsx  config-global.ts
frontend/src/_mock/: _data.ts  _datan.ts  _datar.ts  _mock.ts  _mockn.ts  _mockr.ts  index.ts
frontend/src/components/: AddNodeForm.tsx  AddUserForm.tsx  CaptureAndExportPDF.tsx  EditNodeForm.tsx  EditUserForm.tsx  ExportadorCsv.tsx  MapComponent.tsx  NodoTable.tsx  TablaDatos.tsx  TemperatureChart.tsx  UserTable.tsx  prueba.tsx
frontend/src/components/logo/: logo.tsx
frontend/src/hooks/: useFetchNodos.ts
frontend/src/layouts/: config-nav-dashboard.tsx  config-nav-workspace.tsx
frontend/src/layouts/components/: account-popover.tsx  (+2 more)
frontend/src/pages/: blog.tsx  home.tsx  nodos.tsx  page-not-found.tsx  record.tsx  registro.tsx  sign-in.tsx
frontend/src/routes/: sections.tsx
generador/: main.py
generador/mqtt/: config.py  pub.py  sub.py
routers/: personas.py
(+30 files in other folders)
