[tool.poetry]
name = "rma-grupo-3"
version = "0.1.0"
description = "RMA Grupo 3"
authors = ["Regh <alvarorojascuello@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.0"}
uvicorn = "^0.30.6"
sqlalchemy = "^2.0.34"
pydantic = "^2.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
