[tool.poetry]
name = "proyecto"
version = "0.1.0"
description = "probando todas las cosas estas"
authors = ["SorrowOfSpira <francomatamala1@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
SQLAlchemy = "^2.0.35"
uvicorn = "^0.31.0"
paho-mqtt = "^2.1.0"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
